force-app/main/default/objects/Opportunity/fields/Actual_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Tonnage__c</fullName>
    <label>Quote Tonnage (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>