force-app/main/default/objects/Opportunity/fields/Additional_Analysis_of_Reason_for__c.field-meta.xml
<CustomField>
    <fullName>Additional_Analysis_of_Reason_for__c</fullName>
    <description>Please provide more detail as to the reason why this Opportunity was lost.</description>
    <inlineHelpText>Please provide more detail as to the reason why this Opportunity was lost.</inlineHelpText>
    <label>More Info: Reason Opportunity Was Lost</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>