force-app/main/default/objects/Opportunity/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the person responsible for receiving invoices related to this opportunity</description>
    <inlineHelpText>Refers to the person responsible for receiving invoices related to this opportunity</inlineHelpText>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>