force-app/main/default/objects/Opportunity/fields/Business_Development__c.field-meta.xml
<CustomField>
    <fullName>Business_Development__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development</label>
    <referenceTo>Business_Development__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>