force-app/main/default/objects/Opportunity/fields/Closed_Lost_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Renewal_Date__c</fullName>
    <description>When is the customer likely to renew or reopen this Closed/Lost Opportunity</description>
    <inlineHelpText>When is the customer likely to renew or reopen this Closed/Lost Opportunity</inlineHelpText>
    <label>Closed/Lost Renewal Date</label>
    <type>Date</type>
</CustomField>