force-app/main/default/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Previous Next Steps/Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>