force-app/main/default/objects/Opportunity/fields/Container_Profile__c.field-meta.xml
<CustomField>
    <fullName>Container_Profile__c</fullName>
    <label>Container Profile</label>
    <type>TextArea</type>
</CustomField>