force-app/main/default/objects/Opportunity/fields/Container_Weight__c.field-meta.xml
<CustomField>
    <fullName>Container_Weight__c</fullName>
    <inlineHelpText>This weight is used to work out the customer annual tons.  If you don&apos;t know the exact weight please enter an estimate as this can be changed</inlineHelpText>
    <label>Container Weight</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>