force-app/main/default/objects/Opportunity/fields/Current_Manufacturer_lookup__c.field-meta.xml
<CustomField>
    <fullName>Current_Manufacturer_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Current Manufacturer)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>