force-app/main/default/objects/Opportunity/fields/Delivery_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Delivery Account)</relationshipLabel>
    <relationshipName>Opportunities_Delivery_Account</relationshipName>
    <type>Lookup</type>
</CustomField>