force-app/main/default/objects/Opportunity/fields/Design_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Design_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify when the creation of a new Design record has been triggered from the Opportunity. It ensures that multiple design records are not created for the same opportunity.</description>
    <label>Design Triggered</label>
    <type>Checkbox</type>
</CustomField>