force-app/main/default/objects/Opportunity/fields/Encirc_Appetite_For_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Appetite_For_Opportunity__c</fullName>
    <description>How strong is the Vidrala desire to win this Opportunity</description>
    <inlineHelpText>How strong is the Vidrala desire to win this Opportunity</inlineHelpText>
    <label>Vidrala Appetite For Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>