force-app/main/default/objects/Opportunity/fields/Encirc_Opportunity_Appetite_Explained__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Opportunity_Appetite_Explained__c</fullName>
    <description>Please provide an explanation for your assessment of Vidrala&apos;s appetite for the Opportunity</description>
    <inlineHelpText>Please provide an explanation for your assessment of Vidrala&apos;s appetite for the Opportunity</inlineHelpText>
    <label>Vidrala Opportunity Appetite Explained</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>