force-app/main/default/objects/Opportunity/fields/Estimated_Tons_000__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tons_000__c</fullName>
    <description>Replace field updated via flow</description>
    <formula>Estimated_Units__c  *    Container_Weight__c/ 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field takes the Est Units, multiples it with the container weight and then divides by 1000</inlineHelpText>
    <label>Estimated Tons (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>