force-app/main/default/objects/Opportunity/fields/Estimated_Volume_Tons__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume_Tons__c</fullName>
    <inlineHelpText>This is the volume we would expect to achieve in the opportunity calendar year</inlineHelpText>
    <label>Est Tons (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>