force-app/main/default/objects/Opportunity/fields/Expected_Annualised_Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annualised_Volume_000_s__c</fullName>
    <description>What volume would you expect for any given year from the customer for this Opportunity? e.g. if the deal is for 100m volume over 5 years then this field = 20m.</description>
    <inlineHelpText>What volume would you expect for any given year from the customer for this Opportunity? e.g. if the deal is for 100m volume over 5 years then this field = 20m.</inlineHelpText>
    <label>Customer Annual Vol Units (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>