force-app/main/default/objects/Opportunity/fields/Expected_Annualised_Volume_Tons_000__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annualised_Volume_Tons_000__c</fullName>
    <description>This field takes the Customer Annual Vol Units, multiples it with the container weight and then divides by 1000</description>
    <formula>Expected_Annualised_Volume_000_s__c * Container_Weight__c/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field takes the Customer Annual Vol Units, multiples it with the container weight and then divides by 1000</inlineHelpText>
    <label>Customer Annual Vol Tons (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>