force-app/main/default/objects/Opportunity/fields/Expected_Current_FY_Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Expected_Current_FY_Volume_000_s__c</fullName>
    <description>Define how much of the Opportunity will realistically be expected to land in this FY. eg if the Opportunity is worth 30m volume over 3 years but will take 2 months to setup and it’s April now then field = 5m</description>
    <inlineHelpText>Define how much of the Opportunity will realistically be expected to land in this FY. eg if the Opportunity is worth 30m volume over 3 years but will take 2 months to setup and it’s April now then field = 5m</inlineHelpText>
    <label>Expected Current FY Volume (000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>