force-app/main/default/objects/Opportunity/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAP</fullName>
                <default>true</default>
                <label>DAP</label>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>EX WORKS</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>