force-app/main/default/objects/Opportunity/fields/More_Info_Reason_Opportunity_Was_Won__c.field-meta.xml
<CustomField>
    <fullName>More_Info_Reason_Opportunity_Was_Won__c</fullName>
    <label>More Info: Reason Opportunity Was Won</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>