force-app/main/default/objects/Opportunity/fields/OM_AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>OM_AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>