force-app/main/default/objects/Opportunity/fields/OM_VID_Idioma__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Español</fullName>
            </value>
            <value>
                <fullName>Portugués</fullName>
            </value>
            <value>
                <fullName>Francés</fullName>
            </value>
            <value>
                <fullName>Inglés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>