force-app/main/default/objects/Opportunity/fields/OM_VID_NumProductosGanadores__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_NumProductosGanadores__c</fullName>
    <label>Número de Productos Ganadores</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.OM_VID_ProductoGanador__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>