force-app/main/default/objects/Opportunity/fields/OM_VID_NumQuotes__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_NumQuotes__c</fullName>
    <label>Número de ofertas</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>