force-app/main/default/objects/Opportunity/fields/OM_VID_TotalPriceProdGanadores__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_TotalPriceProdGanadores__c</fullName>
    <label>Total Price Productos Ganadores__c</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.OM_VID_ProductoGanador__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>