force-app/main/default/objects/Opportunity/fields/Opportunity_Production_Weight_in_Tons__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Production_Weight_in_Tons__c</fullName>
    <label>Opportunity Production Weight in Tons</label>
    <summarizedField>OpportunityLineItem.Opportunity_Production_Weight_in_Tons__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>