force-app/main/default/objects/Opportunity/fields/Opportunity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rating__c</fullName>
    <label>Opportunity Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>