force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reactive</fullName>
                <default>true</default>
                <label>Reactive</label>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>