force-app/main/default/objects/Opportunity/fields/Opportunity_Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Volume_000_s__c</fullName>
    <description>Displays the total number of units, in thousands, for the Opportunity</description>
    <inlineHelpText>Displays the total number of units, in thousands, for the Opportunity</inlineHelpText>
    <label>Opportunity Volume (000)</label>
    <summarizedField>OpportunityLineItem.Volume_000_s__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>