force-app/main/default/objects/Opportunity/fields/Primary_Reason_For_Win__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_For_Win__c</fullName>
    <label>Primary Reason For Win</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Strength of relationship</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>