force-app/main/default/objects/Opportunity/fields/Progress_notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_notes__c</fullName>
    <label>Progress notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>