force-app/main/default/objects/Opportunity/fields/Quote_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Quote_Required_By__c</fullName>
    <label>Quote Required By</label>
    <type>Date</type>
</CustomField>