force-app/main/default/objects/Opportunity/fields/Reason_Opportunity_Was_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Opportunity_Was_Lost__c</fullName>
    <label>Reason Opportunity Was Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Qualified out: design</fullName>
            </value>
            <value>
                <fullName>Qualified out: price</fullName>
            </value>
            <value>
                <fullName>Qualified out: strategic</fullName>
            </value>
            <value>
                <fullName>Qualified out: capacity</fullName>
            </value>
            <value>
                <fullName>Lost: Price</fullName>
            </value>
            <value>
                <fullName>Lost: Quality</fullName>
            </value>
            <value>
                <fullName>Lost: Design</fullName>
            </value>
            <value>
                <fullName>Lost: Timescales</fullName>
            </value>
            <value>
                <fullName>Lost: Legals</fullName>
            </value>
            <value>
                <fullName>Lost: Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>