force-app/main/default/objects/Opportunity/fields/Ref_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Ref_presupuesto__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Ref presupuesto</label>
    <type>AutoNumber</type>
</CustomField>