force-app/main/default/objects/Opportunity/fields/Revenue_ExWorks_Units__c.field-meta.xml
<CustomField>
    <fullName>Revenue_ExWorks_Units__c</fullName>
    <description>Price Ex Works multiplied by quote volume</description>
    <formula>IF(  Actual_Volume__c
=0,
    0, 
    Amount * Actual_Volume__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price Ex Works multiplied by quote volume</inlineHelpText>
    <label>Total Revenue - Ex Works (Units)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>