force-app/main/default/objects/Opportunity/fields/Revenue_Per_Ton_Design_Weight__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Per_Ton_Design_Weight__c</fullName>
    <description>Price Ex Works multiplied by quote tonnage</description>
    <formula>IF(  Actual_Tonnage__c =0,
    0, 
    Amount *   Actual_Tonnage__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price Ex Works multiplied by quote tonnage</inlineHelpText>
    <label>Total Revenue - Ex Works (Ton)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>