force-app/main/default/objects/Opportunity/fields/Revenue_Per_Ton_Production_Weight__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Per_Ton_Production_Weight__c</fullName>
    <description>Opportunity &quot;Amount&quot; divided by &quot;Opportunity Production Weight in Tons&quot;</description>
    <formula>IF( Opportunity_Production_Weight_in_Tons__c = 0,
    0,
    Amount / Opportunity_Production_Weight_in_Tons__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity &quot;Amount&quot; divided by &quot;Opportunity Production Weight in Tons&quot;</inlineHelpText>
    <label>Revenue Per Ton (Production Weight)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>