force-app/main/default/objects/Opportunity/fields/Sales_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Name__c</fullName>
    <description>Set by Owner via User Record</description>
    <formula>IF(  ISPICKVAL (Owner.Sales_Organisation_Name__c ,&quot;Fifty&quot;), &quot;Fifty&quot;,
IF( ISPICKVAL (Owner.Sales_Organisation_Name__c ,&quot;UK&quot;), &quot;UK&quot;,
IF( ISPICKVAL (Owner.Sales_Organisation_Name__c ,&quot;Italy&quot;), &quot;Italy&quot;,&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set by Owner via User Record</inlineHelpText>
    <label>Sales Org Name</label>
    <type>Text</type>
</CustomField>