force-app/main/default/objects/Opportunity/fields/Sales_Org_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_SAP_Code__c</fullName>
    <description>Set by Owner via User Record</description>
    <formula>IF( ISPICKVAL ( Owner.Sales_Organisation_SAP_Code__c  ,&quot;EN60&quot;), &quot;EN60&quot;,
IF( ISPICKVAL (Owner.Sales_Organisation_SAP_Code__c ,&quot;VD30&quot;), &quot;VD30&quot;,
IF( ISPICKVAL (Owner.Sales_Organisation_SAP_Code__c ,&quot;VD10&quot;), &quot;VD10&quot;,
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set by Owner via User Record</inlineHelpText>
    <label>Sales Org SAP Code</label>
    <type>Text</type>
</CustomField>