force-app/main/default/objects/Opportunity/fields/Sales_Organization_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_Text__c</fullName>
    <label>Sales Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Fifty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>