force-app/main/default/objects/Opportunity/fields/Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>Term_Duration__c</fullName>
    <formula>( Supply_Term_End_Date__c -  First_Supply_Predicted_Date__c  )/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Duration</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>