force-app/main/default/objects/Opportunity/fields/Variance_Units__c.field-meta.xml
<CustomField>
    <fullName>Variance_Units__c</fullName>
    <formula>Actual_Volume__c - Estimated_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>