force-app/main/default/objects/Opportunity/recordTypes/Encirc_Master_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Encirc_Master_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Bottles Sales Process</businessProcess>
    <label>Encirc Master Opportunity</label>
</RecordType>