force-app/main/default/objects/Opportunity/recordTypes/Existing_Customer_Existing_Bottle_New_Volume.recordType-meta.xml
<RecordType>
    <fullName>Existing_Customer_Existing_Bottle_New_Volume</fullName>
    <active>true</active>
    <businessProcess>Existing Customer%2C Existing Bottle%2C New Volume</businessProcess>
    <label>Existing Customer: Existing Bottle &amp; New Volume</label>
</RecordType>