force-app/main/default/objects/Opportunity/recordTypes/Existing_Customer_New_Bottle_Counter_Spec.recordType-meta.xml
<RecordType>
    <fullName>Existing_Customer_New_Bottle_Counter_Spec</fullName>
    <active>true</active>
    <businessProcess>Existing Customer With Any New Bottle</businessProcess>
    <label>Existing Customer: New Bottle Counter Spec</label>
</RecordType>