force-app/main/default/objects/Opportunity/recordTypes/Existing_Customer_New_Bottle_New_Volume.recordType-meta.xml
<RecordType>
    <fullName>Existing_Customer_New_Bottle_New_Volume</fullName>
    <active>true</active>
    <businessProcess>Existing Customer With Any New Bottle</businessProcess>
    <label>Existing Customer: New Bottle &amp; New Volume</label>
</RecordType>