force-app/main/default/objects/Opportunity/recordTypes/Fifty_Master_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Fifty_Master_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Fifty Sales Process</businessProcess>
    <label>Fifty Master Opportunity</label>
</RecordType>