force-app/main/default/objects/Opportunity/recordTypes/MPA_Only.recordType-meta.xml
<RecordType>
    <fullName>MPA_Only</fullName>
    <active>true</active>
    <businessProcess>MPA Only</businessProcess>
    <label>MPA Only</label>
</RecordType>