force-app/main/default/objects/Opportunity/recordTypes/New_Customer_Existing_Bottle.recordType-meta.xml
<RecordType>
    <fullName>New_Customer_Existing_Bottle</fullName>
    <active>true</active>
    <businessProcess>New Customer</businessProcess>
    <label>New Customer: Existing Bottle</label>
</RecordType>