force-app/main/default/objects/Opportunity/recordTypes/New_Customer_New_Bottle.recordType-meta.xml
<RecordType>
    <fullName>New_Customer_New_Bottle</fullName>
    <active>true</active>
    <businessProcess>New Customer</businessProcess>
    <label>New Customer: New Bottle</label>
</RecordType>