force-app/main/default/objects/Opportunity/validationRules/Enforce_Renewal_Opportunity_Renewal_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Renewal_Opportunity_Renewal_Date</fullName>
    <active>true</active>
    <description>User must enter a renewal date for any Opportunity that has been Closed/Lost</description>
    <errorConditionFormula>AND(

(ISPICKVAL ( StageName, &quot;Closed Lost&quot;)),
RecordType.DeveloperName &lt;&gt; &quot;Fifty_Master_Opportunity&quot;,
OR (
( ISBLANK(Closed_Lost_Renewal_Date__c)),
( Closed_Lost_Renewal_Date__c &lt;= Today() ) )
)</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Renewal_Date__c</errorDisplayField>
    <errorMessage>Please enter date when you expect customer to renew this Opportunity</errorMessage>
</ValidationRule>