force-app/main/default/objects/Opportunity/validationRules/Fifty_Opportunity_New_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Fifty_Opportunity_New_Stage</fullName>
    <active>true</active>
    <description>New Fifty Opportunity stage must be &quot;Introduction&quot;</description>
    <errorConditionFormula>AND(
ISNEW(),
$RecordType.DeveloperName = &quot;Fifty_Master_Opportunity&quot;,
NOT(ISPICKVAL(StageName, &quot;Introduction&quot;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Stage must be &quot;Introduction&quot; for new Opportunities</errorMessage>
</ValidationRule>