force-app/main/default/objects/Opportunity/validationRules/More_info_about_Opp_loss.validationRule-meta.xml
<ValidationRule>
    <fullName>More_info_about_Opp_loss</fullName>
    <active>false</active>
    <description>User must enter supplementary info about the reason why an Opp has been lost if the picklist choice is anything OTHER THAN &quot;Qualified Out&quot;</description>
    <errorConditionFormula>AND(

OR(
ISPICKVAL(  Reason_Opportunity_Was_Lost__c  , &quot;Lost: Price&quot;),
ISPICKVAL(  Reason_Opportunity_Was_Lost__c  , &quot;Lost: Quality&quot;),
ISPICKVAL(  Reason_Opportunity_Was_Lost__c  , &quot;Lost: Design&quot;),
ISPICKVAL(  Reason_Opportunity_Was_Lost__c  , &quot;Lost: Timescales&quot;),
ISPICKVAL(  Reason_Opportunity_Was_Lost__c  , &quot;Lost: Legals&quot;)),


ISBLANK(( Additional_Analysis_of_Reason_for__c ))



)</errorConditionFormula>
    <errorDisplayField>Additional_Analysis_of_Reason_for__c</errorDisplayField>
    <errorMessage>Please provide additional information about why the Opportunity was lost</errorMessage>
</ValidationRule>