force-app/main/default/objects/Opportunity/validationRules/Opportunity_Close_Date_Is_In_The_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Close_Date_Is_In_The_Future</fullName>
    <active>false</active>
    <description>Validates that the Close Date is in the future</description>
    <errorConditionFormula>CloseDate &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>The Opportunity Close Date must be in the future</errorMessage>
</ValidationRule>